--- a/DesktopFileCreator.csproj
+++ b/DesktopFileCreator.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="GtkSharp" Version="3.22.25.98"/>
+    <PackageReference Include="GtkSharp" Version="3.24.24.34"/>
   </ItemGroup>
 </Project>
